ingress/test-nginx-ingress/ingress-test.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-dashboard-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # 开启use-regex,启用path的正则匹配
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # 默认为true，启用TLS时，http请求会 308重定向到https
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # 默认为http，开启后端服务使用proxy_pass https://协议
    #nginx.ingress.kubernetes.io/kackend-protocol: "HTTPS"
spec:
  rules:
  - host: ingress-test.datagrand.com
    http:
      paths:
      - path: /
        backend:
          serviceName: myapp-svc
          servicePort: 80
